--- a/css/contact.css
+++ b/css/contact.css
@@ -4,6 +4,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     height: 45vh;
     display: flex;
     flex-direction: column;
@@ -68,7 +69,7 @@ form .know-more{
 }
 
 .facilities p{
-    padding: 0 5rem;
+    padding: 0;
     font-size: 90%;
 }
 
