--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,178 @@
 /*------------------------------------HEADER---------------------------------*/
 
+nav{
+    position: relative;
+}
+
+.banner{
+    position: absolute;
+    left: 25%;
+    transform: translateY(-200%);
+    transition: transform 3s;
+    z-index: 9999;
+}
+
+.banner h3.cursive-head{
+    color: #0f0f0f;
+    font-size: 400%;
+    color: #fff8f8;
+    margin-bottom: 5rem;
+}
+.banner h1.descript:after{
+    background-color: #fff8f8;
+}
+.banner h1.descript{
+    /* font-family: Dancing Script; */
+    font-size: 350%;
+    font-weight: 600;
+    letter-spacing: 1px;
+
+}
+.card{
+    margin: 0;
+    padding: 0;
+}
+.carousel{
+    position: relative;
+}
+.bg-color{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
+}
+
+
+.special button.know-more{
+    margin-top: 3rem;
+    padding: .5rem 3rem;
+    /* color: #0f0f0f; */
+    color: #0ab5b0;
+    font-size: 125%;
+    border-color: #0ab5b0;
+}
+.special button.know-more:hover{
+    color: #fff8f8;
+    background-color: #0ab5b0;
+    transition: all 1s;
+}
+
+.popular .card{
+    font-size: 150%;
+}
+
+
+/*------------------------------------BANNER START---------------------------------*/
+/*-------------Summer time------------------*/
+.summer-plan .fixed-home{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../images/services/summers.jpg);
+    height: 70vh;
+    background-attachment: fixed;
+}
+
+.summer-plan .fixed-home h1{
+    font-size: 350%;
+    letter-spacing: .1px;
+}
+
+.summer-plan .fixed-home h2{
+    font-size: 250%;
+    color:#fff8f8;
+    margin-top: 1rem;
+    padding: 0 2rem;
+    letter-spacing: 1px;
+    border-bottom: 1px solid transparent;
+}
+.summer-plan .fixed-home h2:hover{
+    color: #0ab5b0;
+    border-color: #0ab5b0;
+    transform: translateY(-15px);
+    transition: all .5s;
+}
+
+
+.guide{
+    text-align: center;
+}
+
+.guide .carded{
+    background-color: #0ab5b0;
+    display: inline-block;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+}
+.guide .carded img{
+    height: 4rem;
+    width: 3rem;
+    margin-top: 1rem;
+}
+
+.guide #one{
+    background-color: #0ab5b0;
+}
+
+.guide #two{
+    background-color: #ffb120;
+}
+
+.guide #three{
+    background-color: rgb(255, 15, 175);
+}
+
+.guide .carded-title{
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    font-weight: 700;
+    font-size: 120%;
+}
+
+.guide .carded-info{
+    font-size: 90%;
+    line-height: 2rem;
+}
+
+.guide .know-more{
+    font-size: 120%;
+    margin-top: .5rem;
+    padding: .5rem 2rem;
+}
+
+.guide .know-more:hover{
+    color: #fff8f8;
+}
+/*------------OUR REVIEWS----------*/
+
+.reviews .card{
+    margin: 0 auto;
+    width: 80%;
+    padding: 3rem;
+}
+
+.reviews .card p{
+    font-size: 90%;
+    line-height: 2rem;
+}
+
+.clients img{
+    width: 100%;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+.reviews i{
+    margin-left: -1rem;
+    color: #0ab5b0;
+}
+blockquote .svg-inline--fa {
+    color: #0ab5b0;
+    margin: 1rem;
+}
+  
+.clients-hr{
+    border-top: .05rem solid #1ebba3;
+}
+
 /* Small (sm) devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
     
